[tool.poetry]
name = "memonto"
version = "0.1.0"
description = ""
authors = ["shihanwan <shihanwan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.1"
rdflib = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
